syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.cike.carinen.grpc";
option java_outer_classname = "NamingServerProto";
option objc_class_prefix = "RTG";

package routeguide;


service NamingServer {

  // 发送心跳包
  rpc heartbeat(InstanceInfo) returns (TODO) {}

  // 注册一个服务
  rpc registerService(ServiceInfo) returns (TODO) {}

  // 注销一个服务
  rpc deregisterService(ServiceInfo) returns (TODO) {}

  // 获取服务列表
  rpc getServiceList(ServiceInfo) returns (TODO) {}

  // 获取
  rpc getInstanceList(ServiceInfo) returns (TODO) {}

  rpc watchService(ServiceInfo) returns (TODO) {}
}

message ServiceInfo {

}

message InstanceInfo {
  uint32 port = 1;


}

message TODO {}
